--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 
 # production
 /build
+/.next
+/next
+.next
 
 # misc
 .DS_Store
@@ -22,3 +25,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .idea
+
